# ascend-rsfa

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_zh-CN.md  SECURITY.md  pyproject.toml  命令.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: validate_repo.py
.github/workflows/: quality.yml
ablation/: 01_official.py  02_v1_kv_advance.py  03_v2_numcores.py  04_v3_pipeline_optimized.py  05_ascend_rsfa.py  ablation_results.txt  run_ablation.py  run_msprof.sh
ascend_rsfa/: __init__.py  flash_attention_forward.py
baseline/: 06-fused-attention.py
benchmarks/: ablation_raw_data.json  ablation_report_causal.txt  ablation_report_non_causal.txt  benchmark_06_msprof.py  benchmark_results.txt  correctness_test_results.txt  final_benchmark_raw.json  run_all_benchmarks.py  run_correctness_test.py  run_final_benchmark.py  run_single_test.py
profiling/: collect_all_profiler.py  collect_profiler_metrics.py  generate_profiler_report.py  profiler_all_raw.json  profiler_analysis_results.txt  profiler_raw_data.json  run_profiler_analysis.py  run_profiling.py
tiling/: check_optimal_tiling.py  retest_optimal_tiling.py  search_optimal_tiling.py  tiling_search_baseline.json  tiling_search_optimized.json
