[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ascend-rsfa"
version = "0.1.0"
description = "FlashAttention forward kernels specialized for Ascend NPUs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ASCEND-RSFA Authors" },
  { name = "Jie Ren", email = "renjie@snnu.edu.cn" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/asdfghjkl509/ascend-rsfa"
Documentation = "https://github.com/asdfghjkl509/ascend-rsfa#readme"
Issues = "https://github.com/asdfghjkl509/ascend-rsfa/issues"

[tool.setuptools.packages.find]
include = ["ascend_rsfa*"]
